vlib/v/checker/tests/sort_method_called_on_immutable_receiver.vv
fn abc (a []int) {
	a.sort()
}

fn main() {
	a := [2,30,10,20,1]
	a.sort(a>b)
	eprintln(' a: $a')
}
